--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Shadcn Admin</title>
-    <meta name="title" content="Shadcn Admin" />
+    <title>Alert MFB</title>
+    <meta name="title" content="Alert MFB" />
     <meta
       name="description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="Admin Dashboard UI built for Alert MFB."
     />
 
     <!-- Open Graph / Facebook -->
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Shadcn Admin" />
     <meta
       property="og:description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="Admin Dashboard UI built for Alert MFB."
     />
     <meta
       property="og:image"
@@ -33,7 +33,7 @@
     <meta property="twitter:title" content="Shadcn Admin" />
     <meta
       property="twitter:description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="Admin Dashboard UI built for Alert MFB."
     />
     <meta
       property="twitter:image"
