fix: dark mode ui

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
+    <!-- <meta property="og:type" content="website" />
     <meta property="og:url" content="https://shadcn-admin.netlify.app" />
     <meta property="og:title" content="Shadcn Admin" />
     <meta
@@ -29,10 +29,10 @@
     <meta
       property="og:image"
       content="https://shadcn-admin.netlify.app/images/shadcn-admin.png"
-    />
+    /> -->
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <!-- <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://shadcn-admin.netlify.app" />
     <meta property="twitter:title" content="Shadcn Admin" />
     <meta
@@ -44,7 +44,7 @@
       content="https://shadcn-admin.netlify.app/images/shadcn-admin.png"
     />
 
-    <meta name="theme-color" content="#fff" />
+    <meta name="theme-color" content="#fff" /> -->
   </head>
   <body>
     <div id="root"></div>
